--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "asar-lightweight",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "description": "A lightweight version of asar",
   "main": "dist/index.js",
+  "bin": "dist/bin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
